# docbench

./: .env.example  .gitignore  BENCHMARK_IMPROVEMENTS.md  Dockerfile  __init__.jac  benchmark.db  config.json  docker-compose.prod.yml  docker-compose.yml  drop_psql_table.sh  env.jac  jac.toml  kill.sh  main.jac  package-lock.json  plot_results.py  public.db  pyproject.toml  requirements.txt  run.sh  tests.json
.jaccache/: __init__.82af02a6.cpython-313.jbc  cfg_build_pass.fd4b0a26.cpython-313.minimal.jbc  cli.c8c2a6d9.cpython-313.jbc  cmdreg.11e6843b.cpython-313.jbc  config.37232f95.cpython-313.jbc  dep_registry.a46b03c0.cpython-313.jbc  es_unparse.5035e7f6.cpython-313.minimal.jbc  esast_gen_pass.59c5c3c1.cpython-313.minimal.jbc  estree.55a674b6.cpython-313.minimal.jbc  operations.724561b8.cpython-313.jbc  pyjac_ast_link_pass.d92b65e0.cpython-313.minimal.jbc  sem_def_match_pass.359a9dcc.cpython-313.minimal.jbc
backend/: app.py
control-panel/: index.html  package-lock.json  package.json
database/: __init__.py  models.py  services.py
docs/: DOCUMENTATION_IMPROVEMENTS.md
generate/: run_lossless.py
jac-docbench/: config.jac  dashboard.cl.jac  main.jac
jac-llmdocs/: config.jac  dashboard.cl.jac  main.jac
models/: __init__.jac  database.jac  edges.jac  nodes.jac  services.jac
pipeline/: __init__.py  evaluator.py  llm.py  run.py  syntax.py  validate.py
release/: candidate.txt
scripts/: configure_public_tests.py  create_admin_token.py  fix_benchmark_runs_schema.py  migrate_tests_to_db.py  seed.jac  test_manager.py
server/: admin.py  app.py  auth.py  routes.py
services/: __init__.jac  evaluator.jac  graph_service.jac  llm_service.jac  oauth_service.jac
suites/: standard.json
ui/: __init__.jac  app.cl.jac  styles.css
utils/: __init__.jac  auth.jac  logger.jac  rate_limit.jac  syntax.jac
(+179 files in other folders)
